Bug 112627 - 'Master Slide' label disappears from Slide content panel after context change
Summary: 'Master Slide' label disappears from Slide content panel after context change
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:6.0.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Sidebar-Properties-Slide
  Show dependency treegraph
 
Reported: 2017-09-24 19:20 UTC by Yousuf Philips (jay) (retired)
Modified: 2017-11-11 10:53 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Comparison after and before (46.28 KB, image/png)
2017-09-26 10:29 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2017-09-24 19:20:14 UTC
Steps:
1. open impress
2. Notice 'Master Slide' label in the Slide content panel of the Properties deck of the sidebar
3. draw a shape
4. deselect the shape
5. 'Master Slide' label is missing

regression as this doesnt happen in 5.2.7.

Version: 6.0.0.0.alpha0+
Build ID: 7315f325ff7ada3d6bd85a471058fdaeaff8cdb0
CPU threads: 2; OS: Linux 4.4; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2017-09-17_06:58:21
Locale: en-US (en_US.UTF-8); Calc: group
Comment 1 Xisco Faulí 2017-09-25 09:35:21 UTC
Regression introduced by:

author	Susobhan Ghosh <susobhang70@gmail.com>	2016-08-03 17:52:53 (GMT)
committer	Yousuf Philips <philipz85@hotmail.com>	2016-08-13 12:11:09 (GMT)
commit 64ff7453408e578b95073db1740bfef4f500a2e4 (patch)
tree 19c675941f6c566386eb1eb71ec0ffda2d83d4c3
parent cb3a00514a6baa9fe7c0660a743b95e1baed7bb8 (diff)
tdf#89466 Add Master Slide and Close Master View button
Impress only. Change panel title on master slide context.
Disable controls in master view.

Change-Id: Ic355a6c74d3f61ea23bcf80e2a2d7e7d7a7980b8
Reviewed-on: https://gerrit.libreoffice.org/27840
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Yousuf Philips <philipz85@hotmail.com>
Tested-by: Yousuf Philips <philipz85@hotmail.com>

Bisected with: bibisect-linux-64-5.3

Adding Cc: to Susobhan Ghosh
Comment 2 Yousuf Philips (jay) (retired) 2017-09-25 11:33:42 UTC
bubli, samuel: tried to fix this myself but couldnt, so is this an easy fix?
Comment 3 Katarina Behrens (Inactive) 2017-09-26 10:22:53 UTC
Doesn't happen w/ master anymore, can some1 re-test? And if confirmed fixed on master, mark as duplicate of bug#106679 ?
Comment 4 Xisco Faulí 2017-09-26 10:29:21 UTC
Created attachment 136541 [details]
Comparison after and before

@bubli, notice the 'Master Slide' label next to the 'Default' dropdown list is gone
Comment 5 Katarina Behrens (Inactive) 2017-09-26 10:34:52 UTC
> @bubli, notice the 'Master Slide' label next to the 'Default' dropdown list
> is gone

OIC. Silly /me then :facepalm:
Comment 6 Xisco Faulí 2017-11-09 20:50:08 UTC
Patch in gerrit: https://gerrit.libreoffice.org/#/c/44566/
Comment 7 Commit Notification 2017-11-11 10:45:34 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b1309cb3bc4b1719b6c99d49baea51f4e96136cd

tdf#112627: Set 'Master Slide' when Context is changed

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.