tdf#112627: Set 'Master Slide' when Context is changed

Change-Id: Iba9a99d3819ddc5462ea969a3529481ddab2f4dc