sd/source/ui/sidebar/SlideBackground.cxx
@@ -171,6 +171,12 @@ SlideBackground::~SlideBackground()
     disposeOnce();
 }
 
+bool SlideBackground::IsDraw()
+{
+    return ( maContext == maDrawMasterContext ||
+             maContext == maDrawOtherContext );
+}
+
 bool SlideBackground::IsImpress()
 {
     return ( maContext == maImpressMasterContext ||
@@ -230,6 +236,7 @@ void SlideBackground::HandleContextChange(
 
     if ( IsImpress() )
     {
+        mpMasterLabel->SetText(SdResId(STR_MASTERSLIDE_NAME));
         mpMarginSelectBox->Hide();
 
         if ( maContext == maImpressMasterContext )
@@ -264,7 +271,10 @@ void SlideBackground::HandleContextChange(
             mpInsertImage->Show();
         }
     }
-    // else Draw or something else, do nothing
+    else if ( IsDraw() )
+    {
+        mpMasterLabel->SetText(SdResId(STR_MASTERPAGE_NAME));
+    }
 }
 
 void SlideBackground::Update()
@@ -508,9 +518,8 @@ IMPL_LINK(SlideBackground, EventMultiplexerListener,
         {
             if(!mbTitle)
             {
-                if(maContext == maDrawOtherContext || maContext == maDrawMasterContext)
+                if( IsDraw() )
                 {
-                    mpMasterLabel->SetText(SdResId(STR_MASTERPAGE_NAME));
                     mpCloseMaster->Hide();
                     mpEditMaster->Hide();
                     if( maContext == maDrawMasterContext)
@@ -520,7 +529,6 @@ IMPL_LINK(SlideBackground, EventMultiplexerListener,
                 }
                 else if ( maContext == maImpressOtherContext || maContext == maImpressMasterContext )
                 {
-                    mpMasterLabel->SetText(SdResId(STR_MASTERSLIDE_NAME));
                     if( maContext == maImpressMasterContext )
                         SetPanelTitle(SdResId(STR_MASTERSLIDE_NAME));
                     else
